crates/plotnik-tests/tests/04-emit/types/naming/error_same_capture_type_different_shapes.txt
Q = (program
  {
    (expression_statement) @stmt
  } @a :: Info
  {
    (lexical_declaration) @decl
  } @b :: Info
)
------------------ DIAGNOSTICS -------------------
error: type name `Info` is already used for a different type
 --> query.ptk:7:11
  |
4 |   } @a :: Info
  |           ---- already used here
...
7 |   } @b :: Info
  |           ^^^^
